--- a/microservice-vue/public/index.html
+++ b/microservice-vue/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width,initial-scale=1.0" name="viewport">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>光学统一数据平台</title>
     <link href="<%= BASE_URL %>logo.png" rel="icon">
 </head>
 
